# ODS_Course_MLOps3.0_unit4

./: Dockerfile  Readme.md  app.py  env.yml  pyproject.toml  requirements.txt
.github/workflow/: ci.yml
.github/workflows/: ci.yml
