[tool.poetry]
name = "scripts"
version = "0.1.0"
description = ""
authors = ["Yuliya Volobueva <volobueva.juli@gmail.com>"]
readme = "README.MD"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88

[tool.ruff.format]
quote-style = "single"
indent-style = "tab"
docstring-code-format = true

[tool.ruff.lint]
select = [
    "D",
    "E",
    "F",
    "UP",
    "B",
    "SIM",
    "I",
]